--- a/package.json
+++ b/package.json
@@ -10,6 +10,14 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^4.13.1"
+    "@astrojs/mdx": "^3.1.3",
+    "@astrojs/tailwind": "^5.1.0",
+    "astro": "^4.13.1",
+    "prettier": "^3.3.3",
+    "prettier-plugin-astro": "^0.14.1",
+    "tailwindcss": "^3.4.7"
+  },
+  "devDependencies": {
+    "@tailwindcss/typography": "^0.5.13"
   }
 }
